<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newNote"
        android:enabled="true"
        android:title="@string/new_note"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_black_24dp"/>

    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:title="@string/logout"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_exit_to_app_black_24dp"/>

    <item
        android:id="@+id/sync"
        android:enabled="true"
        android:title="@string/sync"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_autorenew_black_24dp"/>
</menu>